new env variables

--- a/docker-compose.env
+++ b/docker-compose.env
@@ -1,2 +1,5 @@
 NGROK_AUTHTOKEN=you-ngrok-auth-token
 TUNNEL_BASE_URL=https://you-cloud-endpiont.ngrok-free.com
+ONESHOT_API_KEY=y+m0uk0IRInQ0gy8w5HlrC6PfUL5UjW8
+ONESHOT_API_SECRET=
+ONESHOT_BUSINESS_ID=
