refactored demo to use new python sdk

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - 4040:4040
 
-  python-service:
+  fastapi-service:
     image: fastapi-webhook
     pull_policy: never
     container_name: fastapi
